problem of false belief section first draft done, and first draft conclusion

--- a/joint action and knowing others minds/interacting mindreaders.2.tex
+++ b/joint action and knowing others minds/interacting mindreaders.2.tex
@@ -150,12 +150,12 @@ Without communication, repetition or convention,
 an observer familiar with reamers but not lames 
 may be able to identify the goal of the first action only.
 As this illustrates, ignorance about to which ends actions are means can be an obstacle to goal ascription.%
-\footnote{
-This is not to say that no observer could ever identify the goal of any action she fails to recognise as a means to achieving that goal.
-Surely opaque means are not in every case an insurmountable obstacle to goal ascription.
-Our point is just that opaque means \emph{sometimes}  deprive observers of evidence and so prevent goal ascription.
-}
 Call this the problem of opaque means.
+
+We are not suggesting that no observer could ever identify the goal of any action she fails to recognise as a means to achieving that goal, of course.
+Of course opaque means are not in every case an insurmountable obstacle to goal ascription.
+Our point is pure commonsense and already widely appreciated:
+opaque means sometimes  deprive interpreters of evidence and so prevent goal ascription.
 
 Some of the most plausibly unique aspects of human cognition depend on our abilities to recognise the goals of novel behaviours involving tools, and of communicative gestures.
 If goal ascription is based on entirely observation 
@@ -214,7 +214,10 @@ failures to identify to which ends actions are means can impair goal ascription.
 The problem is potentially a problem for interpreters given the standard, purely observational models of interpretation.
 It is not our intention to suggest that the problem of opaque means is a problem \emph{for models of interpretation}.
 Rather, it is a potential problem \emph{for interpreters}.
-The existence of this problem shows, we shall argue, that models of interpretation based on pure observation are less powerful than models taking into account the possibility of interaction.
+
+That the problem of opaque means exists
+is the first premise in our argument
+that models of interpretation based on pure observation are less powerful than models taking into account the possibility of interaction.
 They are less powerful in this sense: 
 some routes to knowledge of the goals of actions are available only where a model of interpretation takes the possibility of interaction into account.
 In what follows we shall suggest that abilities to engage in joint action with others provides a route to knowledge of the goals of other agents' actions  which avoids the problem of opaque means.
@@ -365,7 +368,9 @@ Instead our present concerns are limited to a normative question about the evide
 The your-goal-is-my-goal inference matters
 not because it describes how interpreters actually assign goals
 but because 
-its existence reveals that interacting mindreaders can have evidence that would be unavailable to them if they were relying   entirely on observation.%
+it characterises a route to knowledge
+that is closed to mere observers
+but open to interacting mindreaders.
  
 
 \section{Avoiding the problem of opaque means}
@@ -394,12 +399,12 @@ But it does provide a possible way around the problem of opaque means by providi
 We saw earlier that the problem of opaque means  may impair goal ascription where actions involve novel uses for tools.
 How could your-goal-is-my-goal mitigate the problem in such cases?
 Imagine we are interacting with a young child,
-Katarina,
+Ayesha,
 and want her to understand how a new tool is used.  
 It is difficult to convey this to her directly.  
 So we first get her interested in achieving an outcome that would require the new tool,
 knowing that she will perform actions directed to achieving this outcome.  
-We then signal to Katarina that we are willing to act jointly with her.  
+We then signal to Ayesha that we are willing to act jointly with her.  
 Now she is in a position to know what the goal of our action will be when we deploy the tool.  
 She is able to identify this goal 
 despite being unable to recognize it as an end to which our tool-using action is a means.
@@ -415,7 +420,7 @@ which are unavailable to mindreaders who can only observe.
 As this example indicates,
 exploiting your-goal-is-my-goal 
 can shift the burden of identifying goals from a mindreader to her target.
-In the example Katarina is the focal mindreader and we are her target;
+In the example Ayesha is the focal mindreader and we are her target;
 but her success in identifying the goal of our actions
 depends on this,
 that our willingness to act jointly with her is based on \emph{our} knowledge of the goals of \emph{her} actions.
@@ -561,10 +566,10 @@ This, in barest outline, is
 how
 abilities to engage in joint action
 mean that 
-a mindreader with an ability to ascribe simple goals only (and no understanding of communicative intent)
+a mindreader with an ability to ascribe simple goals only and no understanding of communicative intent
 might 
 nevertheless reliably respond appropriately to some communicative gestures,
-and so be in a position to understand how such gestures can be used to guide others' actions.%
+and so come be in a position to understand how such gestures can be used to guide others' actions.%
 \footnote{
 Contrast Csibra's claim that,
 early in human development,
@@ -583,7 +588,8 @@ the teleological stance
  together with abilities to engage in simple forms of joint action.
 }
 Of course we have only argued that this transition is theoretically possible;
-we have not attempted to defend any hypothesis about evolution or development.
+we have not attempted to defend any hypothesis about 
+anything's evolution or development.
 Our point is just to illustrate one of several ways in which
 interaction may matter for mindreading.
 Widening the evidential basis for goal ascription
@@ -596,26 +602,111 @@ novel hypotheses about the emergence, in evolution or development (and perhaps e
 
 \section{The problem of false belief}
 \label{sec:false_belief}
-We have just seen that 
-failure to identify to which ends actions are means can impair goal ascription; this was the problem of opaque means.
-Another problem 
-affecting goal ascription given purely observational models of interpretation
- arises from the interdependence of beliefs and goals.
+So far we have been arguing for the value of interaction to interpreters 
+on the grounds that 
+interacting interpreters, unlike mere observers, have 
+a route to knowledge of the goals of others' actions
+which avoids the problem of opaque means.
+There is another reason for supposing that interaction matters for interpretation.
+To introduce this reason we must first describe another problem affecting interpreters, the problem of false belief.
+
+The problem of opaque means occurs when interpreters  must rely entirely on observation and cannot identify to which ends actions are means.
+A yet more familiar problem affecting goal ascription 
+arises from the interdependence of beliefs and goals.
 To illustrate, 
-imagine sitting at a table on which two closed opaque boxes each contain an object; one contains an owl, the other a cat.
-If the goal of your action is to retrieve the owl, 
-and you believe that the owl is in the north-most box,
+imagine sitting at a table.
+On the table are two closed opaque boxes.
+One box contains an owl, the other a cat.
+If the goal of your action is to retrieve the cat, 
+and you believe that the cat is in the north box,
 then 
 (unless things are going very badly) 
-you will reach into the north-most box.
-But of course if you had believed instead that the owl was in the other box,
-then, in acting on the same goal, you would have reached into the other box.
-Now consider someone observing your actions.
-If she is has good reason to believe, falsely, that you know the owl is in the south-most box,
-then she may be justified in supposing, incorrectly, that when you reach into the north-most box the the goal of your action is to retrieve the cat.
+you will reach for the north box.
+But of course if you had believed instead that the cat was in the south box,
+then, in acting on the same goal, you would have reached for the south box.
+Now consider Ayesha who is observing your actions.
+Suppose Ayesha has sufficient reason to believe, falsely, that you know the cat is in the south box.
+Then she may be justified in supposing, incorrectly, that 
+the goal of your action, in reaching for the north box,
+is to retrieve the owl.
 As this illustrates,
-differences in belief between observers and protagonists can be an obstacle to goal ascription.
+differences in belief between observers and protagonists can 
+impair goal ascription
+when the interpreter is unaware of those differences.
 Call this the problem of false belief.
+
+The your-goal-is-my-goal
+route to knowledge
+sometimes enables interpreters to avoid the problem of false belief.
+To illustrate consider a counterfactual alternative to the above example.
+Ayesha dislikes the owl and is concerned with retrieving the cat.
+As you reach for the north box,
+your facial gestures signal willingness to engage in joint action with Ayesha.
+She then concludes, correctly, that your goal is her goal, to retrieve the cat.
+So despite the difference in belief,
+the possibility of interaction means that
+Ayesha can knowledgably identify the goal of your action.
+
+Exploiting your-goal-is-my-goal does not make it possible to  avoid the problem of false belief entirely,
+it only shifts  the problem.
+To illustrate,
+in the above example Ayesha's ability to correctly identify the goal of your action
+depends on your correctly anticipating the goals of her actions---on your knowing that she is concerned with retrieving the cat.
+If you incorrectly anticipated that her actions would be directed to retrieving the owl,
+Ayesha would have been mistaken in taking your actions to be directed to retrieving the cat.
+As this indicates,
+exploiting your-goal-is-my-goal 
+can shift 
+both 
+\emph{which} differences in belief have the potential to impair  goal ascription
+and also 
+\emph{who} needs to be aware of those differences.
+
+In short, then, abilities to engage in joint action provide an interpreter with a route to knowledge of the goals of other agents' actions which does not depend on her knowledge of what her target believes.
+This is not because abilities to engage in joint action provide a way to avoid the problem of false beliefs altogether.
+Rather they shift the burden of resolving the problem of false belief from an interpreter to her target.
+This is potentially valuable for interpreters who have limited insight into their targets' beliefs,
+or who lack abilities to track differences in belief altogether.
+
+On a purely observational model of interpretation,
+it seems inevitable that an interpreter who is unable to track others' beliefs 
+will have to proceed as if there were no differences in beliefs.
+As several philosophers' arguments suggest,
+it is plausible that 
+the interdependence of beliefs and goals 
+means that
+an interpreter will always be able to assign goals to others' actions 
+in a way that is consistent with their beliefs not differing from her own
+(*refs: Davidson; \citealp[p.\ 49]{Bennett:1976rg}).
+If so,
+on a purely observational model of interpretation
+there is no straightforward way in which
+the need to track differences in belief 
+will become apparent to an interpreter.
+Things are different
+if we extend our model of interpretation
+to take into account the possibility of interaction.
+We can then see how
+an interpreter who is unable to track others' beliefs
+will encounter anomalies.
+For some differences in belief will mean that
+ ordinary, purely observational routes to knowledge will result in ascribing one goal
+ whereas
+ exploiting your-goal-is-my-goal would result in a ascribing a different goal.
+That is, the evidence available to an interpreter may inexplicably support two incompatible ascriptions. 
+In this way,
+differences in belief have the potential to cause puzzling anomalies
+even before the interpreter is able to track such differences.
+This 
+raises the possibility
+that abilities to engage in joint action
+may play a role in explaining how  awareness of belief emerges.
+
+
+
+\section{***}
+
+***MOVE:
 
 There is disagreement over whether it is possible to knowledgably identify the goals of an agent's actions without also ascribing some beliefs to that agent.  
 \citet[pp.48--50]{Bennett:1976rg}
@@ -654,10 +745,52 @@ differences in belief between observer and protagonist
 are sometimes an obstacle to goal ascription.
 This is all that the problem of false belief requires.
 
-In what follows we shall argue that abilities to engage in joint action provide an interpreter with a route to knowledge of the goals of other agents' actions which does not depend on her abilities to ascribe beliefs.
-This is not because abilities to engage in joint action provide a way to avoid the problem of false beliefs altogether.
-Rather, as we shall see, abilities to engage in joint action provide a way to shift the burden of resolving the problem of false belief from an interpreter to her target.
 
+\section{Conclusion}
+Our aim was to show that interaction benefits mindreading in this sense:
+some routes to knowledge are closed to mindreaders who rely exclusively on observation
+but
+open to interacting mindreaders.
+In pursuing this aim we focused on interactions which are joint actions.
+Our suggestion was this.
+Where an interpreter recognizes that her target is willing to engage in joint action
+and is unwilling to change which goals her own actions will be directed to,
+she may be in a position to know
+that the goals of her target's actions will be her goals.
+This in outline is the `your-goal-is-my-goal' route to knowledge.
+
+To show that this route to knowledge is potentially valuable,
+we argued that it enables interpreters to overcome two problems,
+the problem of opaque means (section *)
+and the problem of false belief (section *).
+These problems may rarely arise for human adults thanks to sophisticated linguistic communication and extensive knowledge of how things can be achieved.  
+But our focus has been on 
+  very young humans,
+  or other species,
+  or earlier stages of evolution---%
+on cases where there are 
+  absent or fledgling communicative skills,
+  limited insight into others' minds,
+  and narrow knowledge of how things work.
+Where this is the case,
+the problems of false belief and opaque means may easily arise,
+particularly in cases involving novel tools 
+and 
+communicative gestures.
+In principle these interpreters 
+could overcome the two problems 
+by expliting your-goal-is-my-goal.
+This demonstrates that 
+expertise with 
+  tools 
+  and
+  communicative gestures
+does not presuppose rich insights into others intentions and beliefs.
+It is consistent to suppose that 
+such expertise,
+far from  presupposing sophisticated forms of mindreading,
+might instead
+play a role in explaining their emergence in evolution or development (or both).
 
 
 
