--- a/joint action and knowing others minds/interacting mindreaders.2.tex
+++ b/joint action and knowing others minds/interacting mindreaders.2.tex
@@ -33,7 +33,8 @@ The only evidence considered is
 evidence that would be available to mindreaders who observe their targets but are not necessarily in a position to interact with them.
 The present paper identifies evidence 
 that is available only to mindreaders capable of interacting with their targets.
-Being poised to interact with others may enable one to know things about their minds which one might not otherwise be in a position to know.
+Being able to interact with others may enable one to know things about their minds which one might not otherwise be in a position to know.
+This matters for understanding possible roles for interaction in the evolution and development of mindreading. 
 
 %What evidence grounds ascriptions of goals to other agents' actions,
 %and how does the evidence support the ascriptions?
@@ -747,7 +748,7 @@ This is all that the problem of false belief requires.
 
 
 \section{Conclusion}
-Our aim was to show that interaction benefits mindreading in this sense:
+Our aim was to show that interaction can facilitate mindreading in this sense:
 some routes to knowledge are closed to mindreaders who rely exclusively on observation
 but
 open to interacting mindreaders.
@@ -761,33 +762,30 @@ This in outline is the `your-goal-is-my-goal' route to knowledge.
 
 To show that this route to knowledge is potentially valuable,
 we argued that it enables interpreters to overcome two problems,
-the problem of opaque means (section *)
-and the problem of false belief (section *).
+the problem of opaque means
+and the problem of false belief.
 These problems may rarely arise for human adults thanks to sophisticated linguistic communication and extensive knowledge of how things can be achieved.  
-But our focus has been on 
-  very young humans,
-  or other species,
-  or earlier stages of evolution---%
-on cases where there are 
+But interest in the evolution or development of mindreading
+motivates focusing on 
+interpreters with
   absent or fledgling communicative skills,
-  limited insight into others' minds,
+  limited insight into others' minds
   and narrow knowledge of how things work.
-Where this is the case,
+For such interpreters
 the problems of false belief and opaque means may easily arise,
 particularly in cases involving novel tools 
 and 
 communicative gestures.
-In principle these interpreters 
+Interpreters 
 could overcome the two problems 
-by expliting your-goal-is-my-goal.
-This demonstrates that 
+by exploiting the your-goal-is-my-goal route to knowledge.
+It follows that 
 expertise with 
   tools 
   and
   communicative gestures
-does not presuppose rich insights into others intentions and beliefs.
-It is consistent to suppose that 
-such expertise,
+does not presuppose rich insights into others' intentions and beliefs.
+Such expertise,
 far from  presupposing sophisticated forms of mindreading,
 might instead
 play a role in explaining their emergence in evolution or development (or both).
