some progress with introduction and second section on goal ascription

--- a/joint action and knowing others minds/interacting mindreaders.2.tex
+++ b/joint action and knowing others minds/interacting mindreaders.2.tex
@@ -28,13 +28,17 @@
 What evidence grounds ascriptions of thoughts and actions,
 and how does the evidence support the ascriptions?
 In answering this question, 
-philosophers sometimes ignore interaction and focus on mere observation.
+philosophers sometimes focus on mere observation, ignoring interaction.
 The only evidence considered is 
-evidence that would be available to mindreaders who observe their targets but are not necessarily in a position to interact with them.
-The present paper identifies evidence 
-that is available only to mindreaders capable of interacting with their targets.
-Being able to interact with others may enable one to know things about their minds which one might not otherwise be in a position to know.
-This matters for understanding possible roles for interaction in the evolution and development of mindreading. 
+evidence that would be available to mindreaders who observe their targets but are in no position to interact with them.
+The present paper,
+which focuses on goal ascription,
+argues that this is a mistake
+and
+identifies evidence 
+available only to mindreaders capable of interacting with their targets.
+Being poised to interact with others may make it possible to know things about their thoughts and actions which one might not otherwise be in a position to know.
+This has consequences for the possible roles of interaction in explaining the evolution and development of mindreading. 
 
 %What evidence grounds ascriptions of goals to other agents' actions,
 %and how does the evidence support the ascriptions?
@@ -52,20 +56,137 @@ This matters for understanding possible roles for interaction in the evolution a
 
 \section{Mindreading: the normative project}
 
-The question is what constitutes evidence.
+Many people expect to know what those around them are thinking and doing, within limits.
+If someone were to complain of a co-worker that she can never tell what he is thinking or doing,
+the complaint might be informative, surprising even.
+And we might reasonably wonder where the fault lies.
+Maybe the co-worker really is a closed book,
+but maybe the complainant is not really trying to understand him.
+For humans and perhaps other species too,
+access to the actions and minds of those nearby,
+to some of their beliefs and desires,
+emotions, intentions and knowledge states,
+is often normal in this sense: it is lack of access, not access, that is remarkable.
+In this respect we might compare identifying others' thoughts and actions with identifying their ages or masses.
+Although all of these can be disguised with the right props and techniques, some degree of revelation is normal.
 
-Mostly people have supposed that the evidence is available to pure observers --- being able to interact with the targets of mindreading confers no in principle advantage.
+The normalcy of mindreading,
+together with the fact that it often occurs spontaneously (if imperfectly),%
+%
+\footnote{
+On the spontaneity of mindreading in human adults see 
+\citet{senju_mindblind_2009} and 
+\citet{ferguson_eye_2011}.
+On imperfections in human adults' mindreading, 
+see \citet{Keysar:2003xu}.
+Both points come together in \citet{ferguson_listeners_2012}.
+}
+%
+make it easy to 
+overlook questions about its evidential basis.
+Indeed,
+while philosophers have engaged with questions about mechanisms (such as whether mindreading involves a process of simulation or of theorizing or some combination of the two),
+comparatively little effort has been devoted to issues about what evidence could ground mindreading.
+In this paper we pursue one such issue.
 
-In challenging this thesis we want to start with goal ascription, which is either a precursor to or a component of mindreading.
-Recent interest in non-propositional precursors to mindreading makes this appropriate.
+%In everyday life it is sometimes so obvious what others are thinking and doing
+%that it is easy to forget that mindreaders begin life with no knowledge of the specific contents of particular individuals' thoughts 
+%and that to acquire this knowledge
+%there must be 
 
-***Goal ascription essential for verifying predictions of action.
+What is the evidential basis for ascriptions of thought and action and how does the evidence support the ascriptions?
+To stress that this question is not directly about about \emph{how} anyone actually ascribes thoughts or identifies actions% 
+% nor directly about the mechanisms, processes or representations involved in mindreading
+, Davidson 
+sometimes formulates the question by asking what someone \emph{could} know that would put them in a position to identify another's thoughts and actions \citep[e.g.][p.\ 126]{Davidson:1973jx}.
+
+The two most sustained and elaborate attempts to answer this question,
+Davidson's (\citeyear{Davidson:1984wh}) and Dennett's (\citeyear{Dennett:1987sf}),
+do not exploit the possibility of interaction.
+The evidential bases they consider and the principles which they identify to link the evidence with ascriptions of thought and action are available to entirely passive observers.
+So on their theories,
+a purely passive mindreader observing from behind a one-way mirror
+is on a par with
+a mindreader who does or could interact with those she seeks to interpret.
+The two are on a par in this sense:
+in principle the same evidence could be available to each, and each can exploit the same principles in moving from evidence to ascriptions of thought.
+In this paper we aim to show
+that mindreaders who are capable of interacting with their targets are at an advantage.
+Their ascriptions can be justified by evidence and principles which would be unavailable if they were entirely passive observers.
+
+Being poised to interact with others enables one to know things about their minds which one might not otherwise be in a position to know; or so we aim to show in what follows.
+Because the leading theories have supposed that being able to interact makes no difference,
+they have treated the evidential basis for mindreading as more narrow than it truly is.
+This matters because broadening the evidential basis will enable us to give a more accurate and comprehensive theory of mindreading.
+And, as we shall argue, this in turn matters because it may bear on the possibility of explaining the emergence, in evolution or in development, of mindreading.
+Several researchers have offered quite general conjectures about how interaction might explain the emergence of sophisticated forms of cognition.%
+\footnote{
+\citet[p.\ 1]{Moll:2007gu}
+argue for the `Vygotskian Intelligence Hypothesis' according to which `the unique aspects of human cognition ... were driven by, or even constituted by, social co-operation.'
+\citet[p.\ 103]{Knoblich:2006bn} offer a different conjecture:
+`perception, action, and cognition are grounded in social interaction  … functions traditionally considered hallmarks of individual cognition originated through the need to interact with others.'
+}
+Studying how interaction broadens the evidential basis of mindreading will eventually point to one way of filling in some details.
+
+%This, then, is our pitch.
+%To formulate (and, eventually, test) hypotheses about how mindreading develops,
+%or about how it evolves,
+%it is useful to understand not only which mechanisms mindreading involves
+%but also what evidence grounds mindreading.
+%And it since it turns out 
+
+
 
 \section{Goal ascription}
 Purposive action is action directed to the realisation of one or more outcomes.
 Goal ascription is the process of identifying which outcomes others' purposive actions are directed to.
+Some might argue that goal ascription is not mindreading because 
+identifying relations between actions and the outcomes to which they are directed
+does not necessarily involve ascribing mental states.
+Recognizing the force of this argument,
+we wish to remain neutral on whether or not goal ascription is actually mindreading.
+Either way,
+goal ascription is essential in nearly all mindreading.
+For mindreading typically involves or depends on predictions about how individuals will act,
+and those predictions can rarely be verified without the mindreader identifying which goals the actions are directed to.
+
+We shall focus on goal ascription.
+This is partly because doing so  greatly simplifies our argument,
+but mainly because goal ascription is widely thought to be among the very earliest components of mindreading to emerge (or, if goal ascription is not mindreading, then it is a late precursor).%
+\footnote{
+See, for example,
+\citet{Gergely:1995sq} and 
+\citet{Woodward:1998dm}.
+See also
+\citet[p.\ 111, Box 1]{Baillargeon:gx}
+on two subsystems
+and 
+\citet{Povinelli:2001jf} on `behavioural regularities'.
+}
+By showing that
+  interacting mindreaders may have access to 
+  evidence for goal ascriptions 
+  which is unavailable to those who merely observe
+we may be able to indicate ways in which interaction could facilitate the emergence, in evolution or development, of more sophisticated forms of mindreading.%
+\footnote{
+Of course if goal ascription is not mindreading,
+then in showing that ***
+... indirectly ***
+}   
+
+
+***use from below (and fn 22ish):
+What evidence could support hypotheses about the outcomes to which actions are directed? And how would the evidence support the hypotheses?22
+***
+
+
+
 Because goal ascription has received little attention,
 we  first review some of the benefits that being able to identify others' goals brings.
+
+***Recent interest in non-propositional precursors to mindreading makes focus on goal ascription this appropriate.
+
+
 
 It is a familiar idea that goal ascription enables one to learn from others' successes.
 For example,
@@ -128,6 +249,45 @@ Some philosophers have argued\footnote{*Bennett} or implied\footnote{*Davidson} 
 On their view, the goal ascription and mindreading are interdependent in this sense: 
 there is no evidence for hypotheses narrowly about goals, only evidence for more complex hypotheses concerning both goals and mental states (such as beliefs).
 So, on this view, those without metarepresentational abilities are not in a position to know the goals of other agents' actions.
+
+***
+
+There is disagreement over whether it is possible to knowledgably identify the goals of an agent's actions without also ascribing some beliefs to that agent.  
+\citet[pp.48--50]{Bennett:1976rg}
+%\citet[pp.48--50]{Bennett:1976rg} suggests that a theory of goals ascription has to be developed together with a theory of (proto-)belief ascription: `An animal’s behaviour does not show what it registers unless we know what it seeks; but how can we learn what it seeks before we know what it registers?' [p. 48]
+and 
+\citet{Davidson:1974gh}
+both appear to hold that this is impossible,
+that identifying goals cannot be done independently of ascribing beliefs.
+By contrast,
+\citet{Gergely:1995sq},
+*Meltzoff?,
+\citet{Baillargeon:gx}
+and 
+\citet{Woodward:1998dm}
+(among many others)
+appear to assume the opposite, 
+that it is possible to identify goals without even being able to ascribe beliefs.
+For what it is worth, we tentatively favour this latter position.%
+\footnote{
+It is striking that, as far as we can tell, neither Bennett nor Davidson offers an argument for this claim.
+They do note that beliefs and goals make an interdependent contribution to observed action.
+But this by itself does not show that goal ascription cannot in some cases involve justifiably ignoring the possibility of differences in belief between interpreters and their targets.
+For instance,
+suppose that two people are sitting opposite each other at a low table
+ which is 
+sparsely populated with objects.
+The objects are all out in the open; manifestly, both can clearly see them.
+If one reaches to grasp one of these objects (the duck, say), 
+must the other ascribe beliefs in order to knowledgeably identify the goal of her action?
+On the face of it, she need not.  
+Even if she had no ability to ascribe beliefs, she might nevertheless be in a position to acquire knowledge of the goal of the other's action.
+}
+However, this debate is not directly relevant to our concerns here.
+Both sides can agree that 
+differences in belief between observer and protagonist
+are sometimes an obstacle to goal ascription.
+This is all that the problem of false belief requires.
 
 
 
@@ -705,47 +865,6 @@ may play a role in explaining how  awareness of belief emerges.
 
 
 
-\section{***}
-
-***MOVE:
-
-There is disagreement over whether it is possible to knowledgably identify the goals of an agent's actions without also ascribing some beliefs to that agent.  
-\citet[pp.48--50]{Bennett:1976rg}
-%\citet[pp.48--50]{Bennett:1976rg} suggests that a theory of goals ascription has to be developed together with a theory of (proto-)belief ascription: `An animal’s behaviour does not show what it registers unless we know what it seeks; but how can we learn what it seeks before we know what it registers?' [p. 48]
-and 
-\citet{Davidson:1974gh}
-both appear to hold that this is impossible,
-that identifying goals cannot be done independently of ascribing beliefs.
-By contrast,
-\citet{Gergely:1995sq},
-*Meltzoff?,
-\citet{Baillargeon:gx}
-and 
-\citet{Woodward:1998dm}
-(among many others)
-appear to assume the opposite, 
-that it is possible to identify goals without even being able to ascribe beliefs.
-For what it is worth, we tentatively favour this latter position.%
-\footnote{
-It is striking that, as far as we can tell, neither Bennett nor Davidson offers an argument for this claim.
-They do note that beliefs and goals make an interdependent contribution to observed action.
-But this by itself does not show that goal ascription cannot in some cases involve justifiably ignoring the possibility of differences in belief between interpreters and their targets.
-For instance,
-suppose that two people are sitting opposite each other at a low table
- which is 
-sparsely populated with objects.
-The objects are all out in the open; manifestly, both can clearly see them.
-If one reaches to grasp one of these objects (the duck, say), 
-must the other ascribe beliefs in order to knowledgeably identify the goal of her action?
-On the face of it, she need not.  
-Even if she had no ability to ascribe beliefs, she might nevertheless be in a position to acquire knowledge of the goal of the other's action.
-}
-However, this debate is not directly relevant to our concerns here.
-Both sides can agree that 
-differences in belief between observer and protagonist
-are sometimes an obstacle to goal ascription.
-This is all that the problem of false belief requires.
-
 
 \section{Conclusion}
 Our aim was to show that interaction can facilitate mindreading in this sense:
@@ -759,6 +878,15 @@ and is unwilling to change which goals her own actions will be directed to,
 she may be in a position to know
 that the goals of her target's actions will be her goals.
 This in outline is the `your-goal-is-my-goal' route to knowledge.
+
+
+
+***Return to the leading theories?
+We do not take this to show that the leading theories must be entirely discarded.
+If we are right about interaction making evidence available, 
+either leading theory can be extended accordingly.
+***
+
 
 To show that this route to knowledge is potentially valuable,
 we argued that it enables interpreters to overcome two problems,
