--- a/joint action and knowing others minds/interacting mindreaders.tex
+++ b/joint action and knowing others minds/interacting mindreaders.tex
@@ -29,24 +29,25 @@
 
 
 \section{Davidson's question: What grounds mindreading?}
-Many people expect to know what those around them think, within limits.
-If someone were to complain of a co-worker that she can never tell what she  thinking,
+Many people expect to know what those around them think and do, within limits.
+If someone were to complain of a co-worker that she can never tell what he is thinking or doing,
 the complaint might be informative, surprising even.
 And we might reasonably wonder where the fault lies.
 Maybe the co-worker really is a closed book,
-but maybe complainant is not really trying to understand her.
+but maybe complainant is not really trying to understand him.
 For humans and perhaps other species too,
 access to the minds of those nearby,
 to some of their beliefs and desires,
 emotions, intentions and knowledge states,
 is often the norm in this sense: it is lack of access, not access, that is remarkable.
+In this respect we might compare identifying others' thoughts with identifying their ages or masses.
+Although all of these can be disguised with the right props and techniques, some degree of revelation is normal.
+
 And often enough we read others' minds spontaneously
 without having to stop and think.\footnote{
 ***fluently --- narrative interpretation
 ***spontaneously --- Rubio and Ferguson, Senju et al
 }
-In this respect we might compare identifying others' thoughts with identifying their masses.
-And although both can be disguised with the right props and techniques, some degree of revelation is normal.
 
 This mundane fact about minds raises many questions.
 Some concern mechanism, how one subject is able to discover facts about another's mind.
@@ -61,7 +62,7 @@ To stress that this question is not directly about about \emph{how} anyone actua
 , Davidson (who provided the best developed, most systematic answer to our question)
 sometimes formulates the question by asking what someone \emph{could} know that would put them in a position to identify another's thoughts and actions \citep[e.g.][p.\ 126]{Davidson:1973jx}.
 
-We can clarify this question
+We can clarify this question ***
 
 
 %It can be informative, surprising even
@@ -73,7 +74,7 @@ We can clarify this question
 The two most sustained and elaborate attempts to answer this question,
 Davidson's (\citeyear{Davidson:1984wh}) and Dennett's (\citeyear{Dennett:1987sf}),
 do not exploit the possibility of interaction.
-The evidential basis they consider and the principles which they identify to link the evidence with ascriptions of thought and action are available to entirely passive observers.
+The evidential bases they consider and the principles which they identify to link the evidence with ascriptions of thought and action are available to entirely passive observers.
 So on these theories,
 a purely passive mindreader observing from behind a one-way mirror
 is on a par with
