--- a/joint action and knowing others minds/interacting mindreaders.2.tex
+++ b/joint action and knowing others minds/interacting mindreaders.2.tex
@@ -30,7 +30,8 @@ and how does the evidence support the ascriptions?
 In answering this question, 
 philosophers sometimes focus on mere observation, ignoring interaction.
 The only evidence considered is 
-evidence that would be available to mindreaders who observe their targets but are in no position to interact with them.
+ evidence that would be available to mindreaders 
+observing their targets but in no position to interact with them.
 The present paper,
 which focuses on goal ascription,
 argues that this is a mistake
@@ -98,10 +99,20 @@ What is the evidential basis for ascriptions of thought and action and how does 
 To stress that this question is not directly about about \emph{how} anyone actually ascribes thoughts or identifies actions% 
 % nor directly about the mechanisms, processes or representations involved in mindreading
 , Davidson 
-sometimes formulates the question by asking what someone \emph{could} know that would put them in a position to identify another's thoughts and actions \citep[e.g.][p.\ 126]{Davidson:1973jx}.
+sometimes formulates the question by asking what someone \emph{could} know that would put them in a position to identify another's thoughts and actions.%
+\footnote{
+See, e.g., \citet[p.\ 126]{Davidson:1973jx}.
+While what follows draws  on Davidson's questions and insights,
+our aims here are more modest than his.
+For here we are concerned only with a  fraction of the problem of ascribing mental states and meanings,
+and we are not concerned with larger claims about mind, meaning and truth 
+(on which see 
+\citet{Davidson:1990du} and 
+\citet{lepore_donald_2005}).
+}
 
-The two most sustained and elaborate attempts to answer this question,
-Davidson's (\citeyear{Davidson:1984wh}) and Dennett's (\citeyear{Dennett:1987sf}),
+The most sustained attempts to answer this question,
+Davidson's (\citeyear{Davidson:1984wh}; \citeyear{Davidson:1990du}), Lewis' (\citeyear{lewis:1974ri}) and Dennett's (\citeyear{Dennett:1987sf}),
 do not exploit the possibility of interaction.
 The evidential bases they consider and the principles which they identify to link the evidence with ascriptions of thought and action are available to entirely passive observers.
 So on their theories,
@@ -111,10 +122,10 @@ a mindreader who does or could interact with those she seeks to interpret.
 The two are on a par in this sense:
 in principle the same evidence could be available to each, and each can exploit the same principles in moving from evidence to ascriptions of thought.
 In this paper we aim to show
-that mindreaders who are capable of interacting with their targets are at an advantage.
-Their ascriptions can be justified by evidence and principles which would be unavailable if they were entirely passive observers.
+that mindreaders  capable of interacting with their targets are at an advantage.
+Their ascriptions can rely on evidence and principles which would be unavailable if they were entirely passive observers.
 
-Being poised to interact with others enables one to know things about their minds which one might not otherwise be in a position to know; or so we aim to show in what follows.
+Being poised to interact with others enables one to know things about their minds which one might not otherwise be in a position to know, or so we aim to show in what follows.
 Because the leading theories have supposed that being able to interact makes no difference,
 they have treated the evidential basis for mindreading as more narrow than it truly is.
 This matters because broadening the evidential basis will enable us to give a more accurate and comprehensive theory of mindreading.
@@ -140,18 +151,22 @@ Studying how interaction broadens the evidential basis of mindreading will event
 \section{Goal ascription}
 Purposive action is action directed to the realisation of one or more outcomes.
 Goal ascription is the process of identifying which outcomes others' purposive actions are directed to.
-Some might argue that goal ascription is not mindreading because 
-identifying relations between actions and the outcomes to which they are directed
-does not necessarily involve ascribing mental states.
-Recognizing the force of this argument,
-we wish to remain neutral on whether or not goal ascription is actually mindreading.
-Either way,
-goal ascription is essential in nearly all mindreading.
-For mindreading typically involves or depends on predictions about how individuals will act,
-and those predictions can rarely be verified without the mindreader identifying which goals the actions are directed to.
+To illustrate, suppose that
+Hannah kicks a ball thereby both preventing her sisters from scoring and also breaking a window.
+Asked about episode,
+Hannah might protest that the goal of her action was not to break the window but only to avoid losing a game.
+As this illustrates,
+among the actual and possible outcomes of an action,
+only some are outcomes to which the action was directed.
+Goal ascription is the process of identifying from among an action's actual and possible outcomes
+those to which it is directed.
+We shall focus on goal ascription rather than the ascription of beliefs and mental states that has captured most interest.
+Our immediate question is therefore, 
+What evidence could support hypotheses about the outcomes to which actions are directed, 
+and how would the evidence support the hypotheses?
 
-We shall focus on goal ascription.
-This is partly because doing so  greatly simplifies our argument,
+We focus on goal ascription 
+partly to simplify our argument,
 but mainly because goal ascription is widely thought to be among the very earliest components of mindreading to emerge (or, if goal ascription is not mindreading, then it is a late precursor).%
 \footnote{
 See, for example,
@@ -166,38 +181,18 @@ and
 By showing that
   interacting mindreaders may have access to 
   evidence for goal ascriptions 
-  which is unavailable to those who merely observe
+  which is unavailable to those who merely observe,
 we may be able to indicate ways in which interaction could facilitate the emergence, in evolution or development, of more sophisticated forms of mindreading.%
-\footnote{
-Of course if goal ascription is not mindreading,
-then in showing that ***
-... indirectly ***
-}   
-
-
-***use from below (and fn 22ish):
-What evidence could support hypotheses about the outcomes to which actions are directed? And how would the evidence support the hypotheses?22
-***
-
 
 
 Because goal ascription has received little attention,
-we  first review some of the benefits that being able to identify others' goals brings.
-
-***Recent interest in non-propositional precursors to mindreading makes focus on goal ascription this appropriate.
-
-
-
+we shall briefly review some of the benefits that being able to identify others' goals brings.
 It is a familiar idea that goal ascription enables one to learn from others' successes.
 For example,
 if you know or can guess that another agent's actions are directed to opening a nut,
-you may then be in a position to infer that the unfamiliar pattern of actions she is performing constitute a means to open nuts.\footnote{
-***
-\citep{Horner:2005pj}
-}
-Or (in a different case) knowing the goal of another agent's actions may enable you to discover a new use for a tool.\footnote{
-There is currently much 
-}
+you may then be in a position to infer that the unfamiliar pattern of actions she is performing constitute a means to open nuts.
+%\citep{Horner:2005pj}
+In a different case, knowing the goal of another agent's actions may enable you to discover a new use for a tool.
 A slightly less familiar idea is that goal ascription enables one to learn from others' failures as well as their successes.
 For example, suppose that while you are searching for some peanuts 
 another agent attempts but fails to reach for a closed container.
@@ -206,8 +201,8 @@ if you know that the goal of the agent's action was to obtain the peanuts
 then you now have evidence as to where they might be.\footnote{
 \citet{hare_chimpanzees_2004} exploit this principle in testing chimpanzees' abilities to ascribe goals.
 }
-This is one illustration of how goal ascription could in principle enable us to learn from others' failures.
-
+This is one illustration of how goal ascription could in principle enable us to learn from others' failures 
+(see \citealp{Want:2001hp} offer another).
 
 
 Goal ascription enables one
@@ -234,31 +229,39 @@ information about an agent's beliefs or other mental states may support conclusi
 Belief- and goal-ascriptions are mutually constraining.)
 
 
-Despite the close connection between goal ascription and mindreading,
-goal ascription does not necessarily involve representing representations.
-To see why not we first need to be careful about the term `goal'.
-***
-[do the detour here]
+Some might argue that goal ascription is not mindreading because 
+identifying relations between actions and the outcomes to which they are directed
+does not necessarily involve ascribing mental states.
+Recognizing the force of this argument,
+we wish to
+duck the complex issues it raises by
+remaining neutral on whether or not goal ascription is actually mindreading.
+Either way,
+goal ascription is essential in nearly all mindreading.
+For mindreading typically involves or depends on predictions about how individuals will act,
+and those predictions can rarely be verified without the mindreader identifying to which goals the actions are directed.
+So even if goal ascription is not mindreading,
+our mission---which is to show that
+being poised to interact with others enables one to know things about their minds which one might not otherwise be in a position to know---%
+can be achieved by focusing on goal ascription.
+If we can show that
+  some evidence for goal ascription is only available to mindreaders who can interact with their targets
+then,
+	given the role of goal ascription in supporting mindreading,
+we can conclude that
+ some evidence which is indirectly relevant for mindreading is available only to mindreaders who can interact with their targets.
 
-The fact that goal ascription does not involve metarepresentation raises the possibility that goal ascription is possible independently of mindreading.
-Consider an agent who has no communicative skills and no metarepresentational abilities.
-Nothing prevents her from \emph{representing} goals, of course.
-But could she actually ascribe goals?
-Is there any evidence which could be available to her and which would support goal ascriptions?
-Some philosophers have argued\footnote{*Bennett} or implied\footnote{*Davidson} that there could not be.
-On their view, the goal ascription and mindreading are interdependent in this sense: 
-there is no evidence for hypotheses narrowly about goals, only evidence for more complex hypotheses concerning both goals and mental states (such as beliefs).
-So, on this view, those without metarepresentational abilities are not in a position to know the goals of other agents' actions.
 
-***
-
-There is disagreement over whether it is possible to knowledgably identify the goals of an agent's actions without also ascribing some beliefs to that agent.  
+There is potential for disagreement over whether it is possible to knowledgably identify the goals of an agent's actions without also ascribing some beliefs to that agent.  
 \citet[pp.48--50]{Bennett:1976rg}
 %\citet[pp.48--50]{Bennett:1976rg} suggests that a theory of goals ascription has to be developed together with a theory of (proto-)belief ascription: `An animal’s behaviour does not show what it registers unless we know what it seeks; but how can we learn what it seeks before we know what it registers?' [p. 48]
 and 
 \citet{Davidson:1974gh}
-both appear to hold that this is impossible,
-that identifying goals cannot be done independently of ascribing beliefs.
+both come close to suggesting that this is impossible,
+that ascribing goals cannot be done independently of ascribing beliefs.
+On this view (whether or not it is theirs), 
+goal ascription is interdependent with propositional attitude ascription in this sense: 
+there is no evidence for hypotheses narrowly about goals, only evidence for more complex hypotheses concerning both goals and mental states (such as beliefs).
 By contrast,
 \citet{Gergely:1995sq},
 *Meltzoff?,
